// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esbuild > tests/fixtures/basic.vue > isProduction = false 1`] = `
"// tests/fixtures/basic.vue
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";

// unplugin-vue:[NULL]/plugin-vue/export-helper
var export_helper_default = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

// tests/fixtures/basic.vue
console.log("Hello world");
var _sfc_main = {};
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock("div", null, _cache[0] || (_cache[0] = [
    _createElementVNode(
      "h1",
      null,
      "Hello World",
      -1
      /* CACHED */
    )
  ]));
}
var basic_default = /* @__PURE__ */ export_helper_default(_sfc_main, [["render", _sfc_render], ["__file", "#FILE#"]]);
export {
  basic_default as default
};
"
`;

exports[`esbuild > tests/fixtures/basic.vue > isProduction = false 2`] = `undefined`;

exports[`esbuild > tests/fixtures/basic.vue > isProduction = true 1`] = `
"// tests/fixtures/basic.vue
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";

// unplugin-vue:[NULL]/plugin-vue/export-helper
var export_helper_default = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

// tests/fixtures/basic.vue
console.log("Hello world");
var _sfc_main = {};
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock("div", null, _cache[0] || (_cache[0] = [
    _createElementVNode(
      "h1",
      null,
      "Hello World",
      -1
      /* CACHED */
    )
  ]));
}
var basic_default = /* @__PURE__ */ export_helper_default(_sfc_main, [["render", _sfc_render]]);
export {
  basic_default as default
};
"
`;

exports[`esbuild > tests/fixtures/basic.vue > isProduction = true 2`] = `undefined`;

exports[`esbuild > tests/fixtures/reactivity-transform.ts > isProduction = false 1`] = `
"// tests/fixtures/reactivity-transform.ts
import { ref } from "vue";
var ref1 = $ref("hello");
var ref2 = $(ref("hello"));
console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));
"
`;

exports[`esbuild > tests/fixtures/reactivity-transform.ts > isProduction = false 2`] = `undefined`;

exports[`esbuild > tests/fixtures/reactivity-transform.ts > isProduction = true 1`] = `
"// tests/fixtures/reactivity-transform.ts
import { ref } from "vue";
var ref1 = $ref("hello");
var ref2 = $(ref("hello"));
console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));
"
`;

exports[`esbuild > tests/fixtures/reactivity-transform.ts > isProduction = true 2`] = `undefined`;

exports[`esbuild > tests/fixtures/reactivity-transform.vue > isProduction = false 1`] = `
"// tests/fixtures/reactivity-transform.vue
import { ref } from "vue";

// unplugin-vue:[NULL]/plugin-vue/export-helper
var export_helper_default = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

// tests/fixtures/reactivity-transform.vue
var _sfc_main = {
  __name: "reactivity-transform",
  setup(__props, { expose: __expose }) {
    __expose();
    const ref1 = $ref("hello");
    const ref2 = $(ref("hello"));
    console.log(ref1);
    console.log(ref2);
    console.log($$(ref1));
    console.log($$(ref2));
    const __returned__ = { ref1, ref2, ref };
    Object.defineProperty(__returned__, "__isScriptSetup", { enumerable: false, value: true });
    return __returned__;
  }
};
var reactivity_transform_default = /* @__PURE__ */ export_helper_default(_sfc_main, [["__file", "#FILE#"]]);
export {
  reactivity_transform_default as default
};
"
`;

exports[`esbuild > tests/fixtures/reactivity-transform.vue > isProduction = false 2`] = `undefined`;

exports[`esbuild > tests/fixtures/reactivity-transform.vue > isProduction = true 1`] = `
"// tests/fixtures/reactivity-transform.vue
import { ref } from "vue";
var _sfc_main = {
  __name: "reactivity-transform",
  setup(__props) {
    const ref1 = $ref("hello");
    const ref2 = $(ref("hello"));
    console.log(ref1);
    console.log(ref2);
    console.log($$(ref1));
    console.log($$(ref2));
    return () => {
    };
  }
};
var reactivity_transform_default = _sfc_main;
export {
  reactivity_transform_default as default
};
"
`;

exports[`esbuild > tests/fixtures/reactivity-transform.vue > isProduction = true 2`] = `undefined`;

exports[`esbuild > tests/fixtures/script-setup.vue > isProduction = false 1`] = `
"// tests/fixtures/script-setup.vue
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";

// unplugin-vue:[NULL]/plugin-vue/export-helper
var export_helper_default = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

// tests/fixtures/script-setup.vue
var foo = "bar";
var _sfc_main = {
  __name: "script-setup",
  setup(__props, { expose: __expose }) {
    __expose();
    const __returned__ = { foo };
    Object.defineProperty(__returned__, "__isScriptSetup", { enumerable: false, value: true });
    return __returned__;
  }
};
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock("div", null, _cache[0] || (_cache[0] = [
    _createElementVNode(
      "h1",
      null,
      "Hello World",
      -1
      /* CACHED */
    )
  ]));
}
var script_setup_default = /* @__PURE__ */ export_helper_default(_sfc_main, [["render", _sfc_render], ["__file", "#FILE#"]]);
export {
  script_setup_default as default
};
"
`;

exports[`esbuild > tests/fixtures/script-setup.vue > isProduction = false 2`] = `undefined`;

exports[`esbuild > tests/fixtures/script-setup.vue > isProduction = true 1`] = `
"// tests/fixtures/script-setup.vue
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
var _sfc_main = {
  __name: "script-setup",
  setup(__props) {
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("div", null, _cache[0] || (_cache[0] = [
        _createElementVNode(
          "h1",
          null,
          "Hello World",
          -1
          /* CACHED */
        )
      ]));
    };
  }
};
var script_setup_default = _sfc_main;
export {
  script_setup_default as default
};
"
`;

exports[`esbuild > tests/fixtures/script-setup.vue > isProduction = true 2`] = `undefined`;

exports[`esbuild > tests/fixtures/script-setup-ts.vue > isProduction = false 1`] = `
"// tests/fixtures/script-setup-ts.vue
import { defineComponent as _defineComponent } from "vue";
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";

// unplugin-vue:[NULL]/plugin-vue/export-helper
var export_helper_default = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

// tests/fixtures/script-setup-ts.vue
var str = "bar";
var _sfc_main = /* @__PURE__ */ _defineComponent({
  __name: "script-setup-ts",
  props: {
    foo: { type: String, required: true, default: "123" },
    bar: { type: Number, required: true, default: 123 },
    baz: { type: Boolean, required: true, default: true }
  },
  setup(__props, { expose: __expose }) {
    __expose({
      str
    });
    const __returned__ = { str };
    Object.defineProperty(__returned__, "__isScriptSetup", { enumerable: false, value: true });
    return __returned__;
  }
});
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock("div", null, _cache[0] || (_cache[0] = [
    _createElementVNode(
      "h1",
      null,
      "Hello World",
      -1
      /* CACHED */
    )
  ]));
}
var script_setup_ts_default = /* @__PURE__ */ export_helper_default(_sfc_main, [["render", _sfc_render], ["__file", "#FILE#"]]);
export {
  script_setup_ts_default as default
};
"
`;

exports[`esbuild > tests/fixtures/script-setup-ts.vue > isProduction = false 2`] = `undefined`;

exports[`esbuild > tests/fixtures/script-setup-ts.vue > isProduction = true 1`] = `
"// tests/fixtures/script-setup-ts.vue
import { defineComponent as _defineComponent } from "vue";
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
var str = "bar";
var _sfc_main = /* @__PURE__ */ _defineComponent({
  __name: "script-setup-ts",
  props: {
    foo: { default: "123" },
    bar: { default: 123 },
    baz: { type: Boolean, default: true }
  },
  setup(__props, { expose: __expose }) {
    __expose({
      str
    });
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("div", null, _cache[0] || (_cache[0] = [
        _createElementVNode(
          "h1",
          null,
          "Hello World",
          -1
          /* CACHED */
        )
      ]));
    };
  }
});
var script_setup_ts_default = _sfc_main;
export {
  script_setup_ts_default as default
};
"
`;

exports[`esbuild > tests/fixtures/script-setup-ts.vue > isProduction = true 2`] = `undefined`;

exports[`esbuild > tests/fixtures/src-script.ts > isProduction = false 1`] = `
"// tests/fixtures/src-script.ts
import { defineComponent } from "vue";
var src_script_default = defineComponent({
  setup() {
    return [];
  }
});
export {
  src_script_default as default
};
"
`;

exports[`esbuild > tests/fixtures/src-script.ts > isProduction = false 2`] = `undefined`;

exports[`esbuild > tests/fixtures/src-script.ts > isProduction = true 1`] = `
"// tests/fixtures/src-script.ts
import { defineComponent } from "vue";
var src_script_default = defineComponent({
  setup() {
    return [];
  }
});
export {
  src_script_default as default
};
"
`;

exports[`esbuild > tests/fixtures/src-script.ts > isProduction = true 2`] = `undefined`;

exports[`esbuild > tests/fixtures/typescript.vue > isProduction = false 1`] = `
"// unplugin-vue:[NULL]/plugin-vue/export-helper
var export_helper_default = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

// tests/fixtures/typescript.vue
var _sfc_main = {};
var typescript_default = /* @__PURE__ */ export_helper_default(_sfc_main, [["__file", "#FILE#"]]);
export {
  typescript_default as default
};
"
`;

exports[`esbuild > tests/fixtures/typescript.vue > isProduction = false 2`] = `undefined`;

exports[`esbuild > tests/fixtures/typescript.vue > isProduction = true 1`] = `
"// tests/fixtures/typescript.vue
var _sfc_main = {};
var typescript_default = _sfc_main;
export {
  typescript_default as default
};
"
`;

exports[`esbuild > tests/fixtures/typescript.vue > isProduction = true 2`] = `undefined`;
